{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 18,
  "lineage": "fd36bd40-afb7-5933-ace8-d6cf8ac7b968",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vkr_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:internet-gateway/igw-0137b5871b503834c",
            "id": "igw-0137b5871b503834c",
            "owner_id": "044450715850",
            "region": "ap-south-1",
            "tags": {
              "Name": "vkr-igw"
            },
            "tags_all": {
              "Name": "vkr-igw"
            },
            "vpc_id": "vpc-08d423e1c52de7968"
          },
          "dependencies": [
            "aws_vpc.vkr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vkr_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:route-table/rtb-07c543469b62c3db3",
            "id": "rtb-07c543469b62c3db3",
            "owner_id": "044450715850",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0137b5871b503834c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vkr-route-table"
            },
            "tags_all": {
              "Name": "vkr-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d423e1c52de7968"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vkr_igw",
            "aws_vpc.vkr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5200e4181d66b01",
            "region": "ap-south-1",
            "route_table_id": "rtb-07c543469b62c3db3",
            "subnet_id": "subnet-05e19659b6244f115"
          },
          "dependencies": [
            "aws_internet_gateway.vkr_igw",
            "aws_route_table.vkr_route_table",
            "aws_subnet.vkr_subnet",
            "aws_vpc.vkr_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbbce8e41e79716c",
            "region": "ap-south-1",
            "route_table_id": "rtb-07c543469b62c3db3",
            "subnet_id": "subnet-0b283786aaf625d7b"
          },
          "dependencies": [
            "aws_internet_gateway.vkr_igw",
            "aws_route_table.vkr_route_table",
            "aws_subnet.vkr_subnet",
            "aws_vpc.vkr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vkr_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:security-group/sg-017d6fa026241b73d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017d6fa026241b73d",
            "ingress": [],
            "name": "terraform-20250731195332367700000001",
            "name_prefix": "terraform-",
            "owner_id": "044450715850",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vkr-cluster-sg"
            },
            "tags_all": {
              "Name": "vkr-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d423e1c52de7968"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vkr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vkr_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:security-group/sg-0908769e54ce9b629",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0908769e54ce9b629",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250731195332370400000002",
            "name_prefix": "terraform-",
            "owner_id": "044450715850",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vkr-node-sg"
            },
            "tags_all": {
              "Name": "vkr-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d423e1c52de7968"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vkr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vkr_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:subnet/subnet-05e19659b6244f115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e19659b6244f115",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044450715850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "vkr-subnet-0"
            },
            "tags_all": {
              "Name": "vkr-subnet-0"
            },
            "vpc_id": "vpc-08d423e1c52de7968"
          },
          "dependencies": [
            "aws_vpc.vkr_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:subnet/subnet-0b283786aaf625d7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b283786aaf625d7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044450715850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "vkr-subnet-1"
            },
            "tags_all": {
              "Name": "vkr-subnet-1"
            },
            "vpc_id": "vpc-08d423e1c52de7968"
          },
          "dependencies": [
            "aws_vpc.vkr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vkr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:vpc/vpc-08d423e1c52de7968",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05a1e37887cbf633f",
            "default_route_table_id": "rtb-0318b70c9a8922c04",
            "default_security_group_id": "sg-005c5ddefe1f98871",
            "dhcp_options_id": "dopt-00c6d7859b291e41d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d423e1c52de7968",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0318b70c9a8922c04",
            "owner_id": "044450715850",
            "region": "ap-south-1",
            "tags": {
              "Name": "vkr-vpc"
            },
            "tags_all": {
              "Name": "vkr-vpc"
            }
          }
        }
      ]
    }
  ]
}